--- a/mock/server/package.json
+++ b/mock/server/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "dependencies": {
     "@hapi/boom": "^10.0.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "helmet": "^6.0.1",
     "morgan": "^1.10.0",
     "mysql2": "^3.0.1",
     "sequelize": "^6.28.0",
@@ -14,9 +17,12 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
+    "@types/csurf": "^1.11.2",
     "@types/dotenv": "^8.2.0",
     "@types/express": "4.17.10",
+    "@types/helmet": "^4.0.0",
     "@types/jest": "^29.5.12",
     "@types/morgan": "^1.9.4",
     "@types/sequelize": "^4.28.14",
