ORM 移行 (Sequelize -> Prisma)

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -16,6 +16,7 @@
     "Orta.vscode-jest",
     "dbaeumer.vscode-eslint",
     "esbenp.prettier-vscode",
+    "Prisma.prisma",
 
     // その他
     "streetsidesoftware.code-spell-checker",
