--- a/mock/server/package.json
+++ b/mock/server/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@hapi/boom": "^10.0.1",
+    "@prisma/client": "^5.9.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "csurf": "^1.11.0",
@@ -12,7 +13,6 @@
     "helmet": "^6.0.1",
     "morgan": "^1.10.0",
     "mysql2": "^3.0.1",
-    "sequelize": "^6.28.0",
     "ts-node-dev": "^2.0.0",
     "yup": "^1.4.0"
   },
@@ -25,7 +25,6 @@
     "@types/helmet": "^4.0.0",
     "@types/jest": "^29.5.12",
     "@types/morgan": "^1.9.4",
-    "@types/sequelize": "^4.28.14",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
     "eslint": "^8.31.0",
@@ -33,6 +32,8 @@
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "node-mocks-http": "^1.14.1",
     "prettier": "^2.8.2",
+    "prisma": "^5.9.1",
+    "prisma-markdown": "^1.0.9",
     "ts-jest": "^29.0.4",
     "typescript": "^4.5.5"
   },
@@ -41,6 +42,8 @@
     "start": "NODE_ENV=production node ./build/index.js",
     "lint": "eslint . --ext=js,jsx,ts,tsx --max-warnings=0",
     "test:ut": "jest --coverage --silent --verbose --colors --watchAll=false",
-    "build": "rm -rf ./build && tsc"
+    "build": "rm -rf ./build && tsc",
+    "gen:db:schema": ". ./.env && MYSQL_URL=mysql://$MYSQL_USER:$MYSQL_PASSWORD@localhost:$MYSQL_PORT/$MYSQL_DATABASE prisma db pull",
+    "gen:db:client": "prisma generate"
   }
 }
