--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,7 @@
     "react-tsparticles": "^1.42.1",
     "react-typed": "^1.2.0",
     "swiper": "^11.1.15",
+    "use-pwa": "^2.2.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
@@ -54,6 +55,7 @@
     "typescript": "^4.5.5",
     "vite": "^5.1.1",
     "vite-plugin-env-compatible": "^2.0.1",
+    "vite-plugin-pwa": "^0.21.0",
     "vite-tsconfig-paths": "^4.3.1"
   },
   "scripts": {
