--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "@sentry/react": "^7.22.0",
     "@sentry/tracing": "^7.22.0",
     "axios": "^1.7.2",
+    "axios-retry": "^4.5.0",
     "i18next": "^21.6.12",
     "react": "18.3.1",
     "react-dom": "18.3.1",
