--- a/mock/server/package.json
+++ b/mock/server/package.json
@@ -11,8 +11,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
-    "morgan": "^1.10.0",
     "mysql2": "^3.0.1",
+    "pino-http": "^10.3.0",
     "ts-node-dev": "^2.0.0",
     "yup": "^1.4.0"
   },
