AI コーディング環境整備

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -18,6 +18,10 @@
     "esbenp.prettier-vscode",
     "Prisma.prisma",
 
+    // AI コーディング
+    "GitHub.copilot",
+    "GitHub.copilot-chat",
+
     // その他
     "streetsidesoftware.code-spell-checker",
     "Gruntfuggly.todo-tree",
